[gd_scene load_steps=15 format=3 uid="uid://cykfcg506dxbr"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_f87ho"]
[ext_resource type="Texture2D" uid="uid://k8wfdjfcmtwm" path="res://icon.svg" id="1_lkf0j"]
[ext_resource type="Script" path="res://Scripts/Components/machine_state.gd" id="2_8tlj6"]
[ext_resource type="Script" path="res://Scripts/Player/States/Move.gd" id="3_kwniv"]
[ext_resource type="Script" path="res://Scripts/Player/States/idle.gd" id="4_uw5kx"]
[ext_resource type="Script" path="res://Scripts/Player/States/Attack.gd" id="5_4mtn6"]
[ext_resource type="Script" path="res://Scripts/Player/States/Jump.gd" id="6_3c8fk"]
[ext_resource type="Script" path="res://Scripts/Player/Health.gd" id="6_pox1v"]
[ext_resource type="Script" path="res://Scripts/Player/States/Fall.gd" id="7_1ja1q"]
[ext_resource type="PackedScene" uid="uid://s5sjw2bvrvdy" path="res://Scenes/Weapons/weapon1.tscn" id="7_fuv5i"]
[ext_resource type="Script" path="res://Scripts/Player/InputComponent.gd" id="8_ihebg"]
[ext_resource type="Script" path="res://Scripts/Player/States/Dash.gd" id="8_vjcl1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dcffs"]
radius = 17.5287
height = 35.0575

[sub_resource type="SpriteFrames" id="SpriteFrames_y0ff8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lkf0j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_f87ho")

[node name="Hitbox" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
scale = Vector2(3.48, 3.48)
shape = SubResource("CapsuleShape2D_dcffs")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.59, 0.59)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="MachineState" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
unique_name_in_owner = true
script = ExtResource("2_8tlj6")
starting_state = NodePath("Idle")

[node name="Move" type="Node" parent="MachineState"]
unique_name_in_owner = true
script = ExtResource("3_kwniv")

[node name="Idle" type="Node" parent="MachineState"]
unique_name_in_owner = true
script = ExtResource("4_uw5kx")

[node name="Attack" type="Node" parent="MachineState"]
unique_name_in_owner = true
script = ExtResource("5_4mtn6")

[node name="Jump" type="Node" parent="MachineState"]
unique_name_in_owner = true
script = ExtResource("6_3c8fk")
deceleration = 1000.0

[node name="Fall" type="Node" parent="MachineState"]
unique_name_in_owner = true
script = ExtResource("7_1ja1q")
deceleration = 1000.0

[node name="Dash" type="Node" parent="MachineState"]
unique_name_in_owner = true
script = ExtResource("8_vjcl1")
move_speed = 1000.0

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_pox1v")
max_value = 200.0

[node name="Weapon" parent="." instance=ExtResource("7_fuv5i")]
unique_name_in_owner = true
position = Vector2(109, -45)

[node name="Animations" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_y0ff8")

[node name="InputComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_ihebg")

[node name="DashCooldown" type="Timer" parent="InputComponent"]
unique_name_in_owner = true
wait_time = 2.0

[node name="Skills" type="Node" parent="."]

[node name="Inventory" type="Node" parent="."]

[connection signal="die_signal" from="Health" to="." method="_on_health_die_signal"]
[connection signal="body_entered" from="Weapon" to="." method="_on_weapon_body_entered"]
[connection signal="timeout" from="InputComponent/DashCooldown" to="InputComponent" method="_on_dash_cooldown_timeout"]
